# air_brain

./: .gitignore  README.md  pyproject.toml  setup.py
air_brain/: config.py  tables.py
air_brain/data/: census.py  county.geojson  epa_ej.py  get_data.py  util.py  wprdc.py
air_brain/data/files/: sensor_json.geojson
air_brain/util/: air.py  loc.py  od.py
data/: get_data.py
data/epa_ej/: 2017.csv  2017_tract.csv  2017_zipcode.csv
notebooks/: EMS vs PM25.ipynb  EPA EJ avgs.ipynb  WIP Asthma preprocess.ipynb  WIP Asthma vs PM25.ipynb  asthma vs pm25 EPA data.ipynb  census block group conversions.ipynb  daily air quality for each zipcode.ipynb  daily air quality vs arrest.ipynb  daily air quality vs daily od.ipynb  daily air quality.ipynb  mapping with geopandas.ipynb  spatial avg air quality.ipynb
notebooks/archive/: EPA EJ avgs.ipynb  asthma.ipynb  daily air quality for each zipcode.ipynb  daily air quality vs arrest.ipynb  daily air quality vs daily od.ipynb  daily air quality.ipynb  od vs epa pm25.ipynb
scripts/: get_data.py
