[tool.poetry]
name = "air-brain"
version = "0.1.0"
description = "Investigate links between air quality and mental health indicators in Allegheny County"
authors = ["Eli <eli.goodfriend@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
notebook = "^7.2.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
